syntax = "proto3";

package account.order.v1;

import "account_commons.proto";

option java_multiple_files = true;
option java_package = "com.hts.generated.grpc.account.order";
option java_outer_classname = "AccountOrderApiProto";

message ReserveCashRequest {
  int64 account_id = 1;
  int64 amount_micro_units = 2;
  string currency = 3;
  string reserve_id = 4;
  string order_id = 5;
}

message ReleaseCashRequest {
  int64 account_id = 1;
  string reserve_id = 2;
}

message ReservePositionRequest {
  int64 account_id = 1;
  string symbol = 2;
  int64 quantity = 3;
  string reserve_id = 4;
  string order_id = 5;
}

message ReleasePositionRequest {
  int64 account_id = 1;
  string reserve_id = 2;
}

service AccountOrderService {
  rpc ReserveCash(ReserveCashRequest) returns (account.CommonReply);
  rpc ReleaseCash(ReleaseCashRequest) returns (account.CommonReply);
  rpc ReservePosition(ReservePositionRequest) returns (account.CommonReply);
  rpc ReleasePosition(ReleasePositionRequest) returns (account.CommonReply);
}